<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:layout_height="wrap_content">

        <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">

            <ImageView
                    android:id="@+id/ivNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_notification"
                    android:layout_weight="0.5"
            />

            <TextView
                    android:text="@string/app_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:gravity="center_horizontal"
            />

            <ImageView
                    android:id="@+id/ivGear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_gear"
                    android:layout_weight="0.5"/>


        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:paddingVertical="@dimen/paddingVertical"
            android:paddingHorizontal="@dimen/paddingHorizontal"
            android:layout_marginRight="@dimen/sideMargin"
            android:layout_marginLeft="@dimen/sideMargin"
            android:background="@drawable/bg_rounded_rectangle"
            android:orientation="vertical"
    >

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/available_balance"
                android:textColor="@color/text"
                android:textSize="@dimen/normalFont"
                android:gravity="center"

        />
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
        >


            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_weight="1"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/usd"
                        android:textColor="@color/text"
                        android:textSize="@dimen/normalFont"
                        android:gravity="right"
                        android:layout_weight="1"
                />

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/balance"
                        android:textSize="@dimen/balanceFont"
                        android:textColor="@color/text"
                        android:layout_weight="1"
                />

            </LinearLayout>

        </LinearLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
        >
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_payment"
                    android:textColor="@color/text"
                    android:layout_weight="1"
            />
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/text"
                    android:gravity="right"
                    android:layout_weight="1"
            />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/sideMargin"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
    >
        <Button
                android:id="@+id/btnTransfer"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:text="@string/transfer_money"
                android:drawableTop="@drawable/money1"
                android:layout_weight="1"
        />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
        />

        <Button
                android:id="@+id/btnRequest"
                android:layout_width="wrap_content"
                android:layout_height="108dp"
                android:text="@string/request_money"
                android:drawableTop="@drawable/money2"
                android:layout_weight="1"
        />


    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="@dimen/sideMargin"
            android:layout_marginTop="15dp"
    >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/sideMargin"

        />
        <TextView
                android:id="@+id/btnViewAll"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/view_all"
                android:gravity="right"
                android:textSize="@dimen/normalFont"

                android:layout_weight="1"
        />

    </LinearLayout>




</LinearLayout>